--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   url_launcher: ^6.3.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  shared_preferences: ^2.0.13
+  flutter_svg: ^2.0.10+1
+  hive:
+  hive_flutter:
   flutter:
     sdk: flutter
 
@@ -48,6 +54,9 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  hive_generator:
+  build_runner:
+
   flutter_test:
     sdk: flutter
 
@@ -72,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
